--- a/04Plantilla/src/app/clientes/clientes.component.html
+++ b/04Plantilla/src/app/clientes/clientes.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <app-card cardTitle="Lista de Proveedores" blockClass="pc-component">
+    <app-card cardTitle="Lista de Clientes" blockClass="pc-component">
       <div class="col-md-12 col-xl-8">
         <h5 class="mb-3">
           <a href="nuevocliente" class="btn btn-outline-dark">Nuevo Cliente</a>
@@ -13,6 +13,7 @@
                   <th>#</th>
                   <th>Cedula</th>
                   <th>Nombres</th>
+                  <th class="text-end">Telefono</th>
                   <th class="text-end">Correo</th>
                   <th></th>
                 </tr>
@@ -23,6 +24,7 @@
                     <td>{{ $index + 1 }}</td>
                     <td>{{ cliente.Cedula }}</td>
                     <td>{{ cliente.Nombres }}</td>
+                    <td>{{ cliente.Telefono }}</td>
                     <td>{{ cliente.Correo }}</td>
                     <td>
                       <button type="button" class="btn btn-outline-success" [routerLink]="['/editarcliente/', cliente.idCliente]">
